--- a/app/main-less/main.less
+++ b/app/main-less/main.less
@@ -13,3 +13,20 @@ body{
   width: 150px;
   margin-left:42%;
 }
+
+.ticket {
+  line-height:0;
+  border-spacing:0;
+  align-content: center;
+  margin-left: 25%;
+  padding: 40px;
+}
+
+.ticket td {
+  padding:0;
+  width: 50px;
+  height: 50px;
+}
+.ticket td{
+  border: solid 3px;
+}
