--- a/app/main-less/main.less
+++ b/app/main-less/main.less
@@ -23,10 +23,39 @@ body{
 }
 
 .ticket td {
-  padding:0;
   width: 50px;
   height: 50px;
 }
 .ticket td{
   border: solid 3px;
+}
+
+.square {
+  background-color: #fff;
+  height: 51px;
+  width: 49px;
+  float: left;
+  text-align: center;
+}
+
+.border {
+  border: 1px solid #000;
+}
+
+.centreText{
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 51px;
+}
+
+.row {
+  align-self: center;
+}
+
+.bingoTicket{
+  padding-top: 20px;
+ margin-left: 25%;
+  width: 500px;
 }
