--- a/app/main-less/main.less
+++ b/app/main-less/main.less
@@ -31,15 +31,19 @@ body{
 }
 
 .square {
-  background-color: #fff;
-  height: 51px;
-  width: 49px;
+  background-color: #DDDDDD;
   float: left;
   text-align: center;
+  width: 60px;
+  padding: 0;
+  margin: 0;
+  border: 0;
+
 }
 
 .border {
-  border: 1px solid #000;
+  border: 2px solid #000;
+  display: inline-block;
 }
 
 .centreText{
@@ -56,6 +60,7 @@ body{
 
 .bingoTicket{
   padding-top: 20px;
- margin-left: 25%;
-  width: 500px;
+  padding-bottom: 20px;
+  margin-left: 25%;
+  width: 600px;
 }
