the game now long poles and sends off the calls to get the "getCall' the numbers are also displaying on the screen. Win conditions added.

--- a/app/main-less/main.less
+++ b/app/main-less/main.less
@@ -63,4 +63,35 @@ body{
   padding-bottom: 20px;
   margin-left: 25%;
   width: 600px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.calledNumber {
+  font-size: 40px;
+}
+.calledRow {
+  font-size: 25px;
+  line-height: 35px;
+  vertical-align: bottom;
+
+}
+.numbersRow{
+  display: inline-block;
+  margin-left: 60px;
+  background-image: url("../images/ball-mobile.png");
+  width: 50px;
+  height: 50px;
+}
+
+.blankSpace{
+background-image: url("../images/white-square.jpg");
+  width: 60px;
+color:#FFFFFF;
+  top:0;
+  z-index: 999;
+}
+
+.matched {
+  background-color: #008800;
 }
